# StockML

./: .gitignore  backtrade_dl.py  config.py  graph.py  income.py  lgdm.py  main.py  pyproject.toml  run_tdx.au3  tdreader.py
easytrader/: api.py  clienttrader.py  grid_strategies.py
stock/: company_info.csv
